--- a/src/css/style.css
+++ b/src/css/style.css
@@ -108,7 +108,7 @@ DESCRIPTION: Main stylesheet containing layout, typography,
 
 html,
 body {
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   background: var(--primary-bg);
   font-family: var(--font-cabin);
@@ -116,6 +116,7 @@ body {
   font-weight: 400;
   font-style: normal;
   font-variation-settings: "wdth" 100;
+  cursor: none;
 }
 
 h1,
@@ -378,6 +379,48 @@ section {
   position: relative;
   display: inline-block;
   will-change: transform;
+}
+
+/* Scroll bar styling */
+.custom-scrollbar {
+  position: fixed;
+  top: 0;
+  right: 0.3rem;
+  height: 100vh; /* changed from 60vh */
+  width: 4px;
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  padding: 1rem 0;
+}
+
+.scrollbar-thumb {
+  position: absolute;
+  top: 0;
+  width: 0.3rem;
+  height: 60px;
+  background: var(--accent-color);
+  border-radius: 999px;
+  opacity: 0;
+  cursor: pointer;
+  will-change: transform, opacity, width;
+}
+
+/* Custom Cursor Styling */
+#jelly-cursor {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 16px;
+  height: 16px;
+  background-color: var(--text-white-primary);
+  border-radius: 50%;
+  transform-origin: 50% 50%;
+  transform: translate(-50%, -50%);
+  will-change: width, height, transform, border;
+  z-index: 99999;
+  pointer-events: none;
+  mix-blend-mode: difference;
 }
 
 @media (max-width: 1000px) {
